# Scalable-Cluster-ChatServer

./: CMakeLists.txt  README.md  autobuild.sh  init_chatdb.sql
include/: share.hpp
include/client/: command.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group_.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user_.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
